<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:backgroundTint="@color/ashyPurple"
    android:orientation="vertical"
    app:cardCornerRadius="20dp"
    android:id="@+id/recylerCard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrain_house"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgPlace"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/placeimg"
            android:elevation="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/img2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/house_card"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/imgPlace"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Title -->
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/bold"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/title_display"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <!-- City -->
            <TextView
                android:id="@+id/city"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/medium"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/city_name"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <!-- Facility -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/cBeds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/bed"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/beds_no"
                    android:textAlignment="gravity"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/cBaths"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/bath"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/baths_no"
                    android:textAlignment="gravity"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:autoSizeTextType="uniform" />
            </LinearLayout>

            <!-- Price -->
            <TextView
                android:id="@+id/placePrice"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/bold"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/price"
                android:textColor="@color/colorPink"
                android:textSize="18sp" />

            <!-- Date -->
            <TextView
                android:id="@+id/date"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/medium"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/postDate"
                android:textColor="@color/dimgray"
                android:textSize="12sp"
                android:textStyle="italic" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>