<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:backgroundTint="@color/ashyPurple"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"

    app:cardCornerRadius="20dp"
    android:layout_marginBottom="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrain_lands"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgLandAd"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/placeimg"
                android:elevation="10dp"
                android:scaleType="fitXY"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/img3"/>

            <LinearLayout
                android:id="@+id/land_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/imgLandAd"
                app:layout_constraintTop_toTopOf="parent">

                <!-- Title -->
                <TextView
                    android:id="@+id/landTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="@font/bold"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/ad_title_land"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <!-- City -->
                <TextView
                    android:id="@+id/landCity"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="@font/medium"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/city_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

                <!-- Land Size -->
                <TextView
                    android:id="@+id/landSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="@font/medium"
                    android:padding="10dp"
                    android:text="@string/ad_land_size"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />

                <!-- Price -->
                <TextView
                    android:id="@+id/landPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="@font/bold"
                    android:padding="10dp"
                    android:text="@string/land_price"
                    android:textColor="@color/colorPink"
                    android:textSize="18sp" />


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


